--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,5 +1,3 @@
 dad-jokes-client:
   url: http://localhost:8081
-  headers:
-    x-rapidapi-key: key
-    x-rapidapi-host: dad-jokes.p.rapidapi.com
+  key: key
